Fix fullscreen on safari

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    background-color: black;
 
     .bg-dark {
         background-color: rgba(0,0,0,.4) !important;
