--- a/src/components/Player/ProgressBar.scss
+++ b/src/components/Player/ProgressBar.scss
@@ -13,6 +13,7 @@
   .progress {
     cursor: pointer;
     height: 10px;
+    background-color: rgba(62, 63, 64, 0.5) !important;
   }
 
   .progress-bar:last-child {
